[project]
name = "votekit"
version = "3.2.2"
description = "A Swiss army knife for computational social choice research."
authors = [{name = "MGGG", email =  "code@mggg.org"}]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "scipy (>=1.16.1, <2.0)",
    "mypy (==1.17.1)",
    "pydantic (>=2.11.5, <3.0)",
    "networkx (>=3.5, <4.0)",
    "jinja2 (>=3.1.6, <4.0)",
    "matplotlib (>=3.10.5, <4.0)",
    "pandas (>2.2)",
    "apportionment (>=1.0, <2.0)",
    "scikit-learn (>=1.7.1, <2.0)",
    "numpy (>=2.2.6, <3.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "types-seaborn (>=0.13.2.20250728,<0.14.0.0)",
    "mypy-extensions (>=1.1.0)",
    "numba (>=0.61.2,<0.62.0)",
    "types-networkx (>=3.5.0.20250728,<4.0.0.0)",
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
black = "^25.1.0"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"
ipython = "^9.2.0"
sphinx = "^8.2.3"
sphinx-copybutton = "^0.5.2"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^3.0.2"
seaborn = "^0.13.2"
ipykernel = "^6.30.1"
nbconvert = "^7.16.6"
scipy-stubs = "^1.16.1.0"
pytest-mpl = ">=0.17.0,<0.18.0"

[tool.ruff]
line-length = 100

[project.urls]
repository = "https://github.com/mggg/VoteKit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
  "slow: long-running tests",
]
testpaths = ["tests"]
