[project]
name = "votekit"
version = "3.3.0"
description = "A Swiss army knife for computational social choice research."
authors = [{name = "MGGG", email =  "code@mggg.org"}]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "scipy (>=1.16.1, <2.0)",
    "mypy (==1.18.2)",
    "pydantic (>=2.11.9, <3.0)",
    "networkx (>=3.5, <4.0)",
    "jinja2 (>=3.1.6, <4.0)",
    "matplotlib (>=3.10.5, <4.0)",
    "pandas (>2.2)",
    "apportionment (>=1.0, <2.0)",
    "scikit-learn (>=1.7.1, <2.0)",
    "numpy (>=2.3.3, <3.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "types-seaborn (>=0.13.2.20250728,<0.14.0.0)",
    "mypy-extensions (>=1.1.0)",
    "numba (>=0.62.1,<0.62.2)",
    "types-networkx (>=3.5.0.20250728,<4.0.0.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "types-psutil (>=7.0.0.20250822,<8.0.0.0)",
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
black = "^25.9.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
ipython = "^9.6.0"
recommonmark = "^0.7.1"
seaborn = "^0.13.2"
ipykernel = "^6.30.1"
scipy-stubs = "^1.16.1.0"
pytest-mpl = ">=0.17.0,<0.18.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-copybutton = "^0.5.2"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^3.0.2"
nbconvert = "^7.16.6"

[tool.ruff]
line-length = 100

[project.urls]
repository = "https://github.com/mggg/VoteKit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true

[[tool.mypy.overrides]]
module = ["apportionment", "apportionment.*", "joblib", "joblib.*", "networkx", "scipy.*", "networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "slow: long-running tests",
]
testpaths = ["tests"]